--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
-    "next": "13.5.6",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
