--- a/package.json
+++ b/package.json
@@ -22,8 +22,23 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.0",
+    "@testing-library/user-event": "^14.5.2",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0"
+  },
+  "jest": {
+    "transform": {
+      "\\.(jpg|jpeg|png|gif|svg)$": "jest-transform-stub",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testEnvironment": "jsdom"
   }
 }
